--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,9 @@ Build-Depends:
  autoconf (>= 2.59),
  automake (>= 1.6),
  check,
+ libcmocka-dev,
  debhelper-compat (= 12),
+ libepoxy-dev,
  libfuse-dev [!hurd-any],
  libjpeg-dev,
  libopus-dev,
@@ -18,6 +20,7 @@ Build-Depends:
  libssl-dev,
  libtool,
  libx11-dev,
+ libx264-dev,
  libxfixes-dev,
  libxrandr-dev,
  nasm [amd64 hurd-i386 i386 kfreebsd-amd64 kfreebsd-i386],
